[package]
name = "design_pattern"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "1.4.0"

[[bin]]
name = "factory_pattern"
path = "src/creational_pattern/factory_pattern/main.rs"

[[bin]]
name = "abstract_factory_pattern"
path = "src/creational_pattern/abstract_factory_pattern/main.rs"

[[bin]]
name = "singleton_pattern"
path = "src/creational_pattern/singleton_pattern/main.rs"

[[bin]]
name = "builder_pattern"
path = "src/creational_pattern/builder_pattern/main.rs"
