[package]
name = "design_pattern"
version = "0.1.1"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "1.4.0"
dyn-clone = "1.0.2"
itertools ="0.9.0"
mut_static = "5.0.0"
rand = "0.7.3"
chrono = "0.4.19"

[[bin]]
name = "factory_pattern"
path = "src/creational_pattern/factory_pattern/main.rs"

[[bin]]
name = "abstract_factory_pattern"
path = "src/creational_pattern/abstract_factory_pattern/main.rs"

[[bin]]
name = "singleton_pattern"
path = "src/creational_pattern/singleton_pattern/main.rs"

[[bin]]
name = "builder_pattern"
path = "src/creational_pattern/builder_pattern/main.rs"

[[bin]]
name = "prototype_pattern"
path = "src/creational_pattern/prototype_pattern/main.rs"

[[bin]]
name = "adapter_pattern"
path = "src/structural_pattern/adapter_pattern/main.rs"

[[bin]]
name = "bridge_pattern"
path = "src/structural_pattern/bridge_pattern/main.rs"

[[bin]]
name = "filter_pattern"
path = "src/structural_pattern/filter_pattern/main.rs"

[[bin]]
name = "composite_pattern"
path = "src/structural_pattern/composite_pattern/main.rs"

[[bin]]
name = "decorator_pattern"
path = "src/structural_pattern/decorator_pattern/main.rs"

[[bin]]
name = "facade_pattern"
path = "src/structural_pattern/facade_pattern/main.rs"

[[bin]]
name = "flyweight_pattern"
path = "src/structural_pattern/flyweight_pattern/main.rs"

[[bin]]
name = "proxy_pattern"
path = "src/structural_pattern/proxy_pattern/main.rs"

[[bin]]
name = "chain_of_responsibility_pattern"
path = "src/behavior_pattern/chain_of_responsibility_pattern/main.rs"

[[bin]]
name = "command_pattern"
path = "src/behavior_pattern/command_pattern/main.rs"

[[bin]]
name = "interpreter_pattern"
path = "src/behavior_pattern/interpreter_pattern/main.rs"

[[bin]]
name = "iterator_pattern"
path = "src/behavior_pattern/iterator_pattern/main.rs"

[[bin]]
name = "mediator_pattern"
path = "src/behavior_pattern/mediator_pattern/main.rs"

[[bin]]
name = "memento_pattern"
path = "src/behavior_pattern/memento_pattern/main.rs"

[[bin]]
name = "observer_pattern"
path = "src/behavior_pattern/observer_pattern/main.rs"

[[bin]]
name = "state_pattern"
path = "src/behavior_pattern/state_pattern/main.rs"

[[bin]]
name = "null_object_pattern"
path = "src/behavior_pattern/null_object_pattern/main.rs"

[[bin]]
name = "strategy_pattern"
path = "src/behavior_pattern/strategy_pattern/main.rs"

[[bin]]
name = "template_pattern"
path = "src/behavior_pattern/template_pattern/main.rs"

[[bin]]
name = "visitor_pattern"
path = "src/behavior_pattern/visitor_pattern/main.rs"
